# IrrigationController

./: .gitignore  .hgignore  Irrigation13A.atsln  fuses.txt  spi.txt
Irrigation13A/: Irrigation13A.cproj  main.c
firmware/: CMakeLists.txt  run.bat
firmware/source/: main.c
pcb/: irrigation-controller.lay6
